<resources>
    <string name="app_name">Quiz  Box</string>
    <string name="app_start_btn">Start</string>
    <string name="category_heading">Categories</string>
    <string name="islamic_category">Islamic</string>
    <string name="history_category">History</string>
    <string name="math_category">Math</string>
    <string name="sports_category">Sports</string>
    <string name="science_category">Science</string>
    <string name="next_btn">Next</string>

    <!--
    <string name="level1">Level 1</string>
    <string name="level2">Level 2</string>
    <string name="level3">Level 3</string>
-->
    <string name="level_select_heading">Choose Difficulty Level</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>