<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/teal_200"
    tools:context=".CategorySelectionActivity">

        <TextView
            android:id="@+id/ScienceCategpry"
            android:layout_width="360dp"
            android:layout_height="108dp"
            android:background="@drawable/science_catg"
            android:fontFamily="@font/fabrica"
            android:onClick="MoveToLanguageSelectionActivity"
            android:padding="20dp"
            android:text="@string/science_category"
            android:textColor="@color/white"
            android:textSize="25pt"
            app:layout_constraintBottom_toTopOf="@+id/HistoryCategory"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.49"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/IslamicCategory" />

        <TextView
            android:id="@+id/HistoryCategory"
            android:layout_width="360dp"
            android:layout_height="108dp"
            android:background="@drawable/history_catg"
            android:fontFamily="@font/fabrica"
            android:onClick="MoveToLanguageSelectionActivity"
            android:padding="20dp"
            android:text="@string/history_category"
            android:textColor="@color/white"
            android:textSize="25pt"
            app:layout_constraintBottom_toTopOf="@+id/SportsCategory"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.549"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ScienceCategpry" />

        <TextView
            android:id="@+id/SportsCategory"
            android:layout_width="360dp"
            android:layout_height="108dp"
            android:background="@drawable/sports_catg"
            android:onClick="MoveToLanguageSelectionActivity"
            android:padding="20dp"
            android:text="@string/sports_category"
            android:fontFamily="@font/fabrica"
            android:textColor="@color/white"
            android:textSize="25pt"
            app:layout_constraintBottom_toTopOf="@+id/MathCategory"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.52"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/HistoryCategory" />

        <TextView
            android:id="@+id/MathCategory"
            android:layout_width="360dp"
            android:layout_height="108dp"
            android:layout_marginBottom="16dp"
            android:background="@drawable/math_catg"
            android:fontFamily="@font/fabrica"
            android:onClick="MoveToLanguageSelectionActivity"
            android:padding="20dp"
            android:text="@string/math_category"
            android:textColor="@color/white"
            android:textSize="25pt"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.529"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/IslamicCategory"
            android:layout_width="354dp"
            android:layout_height="120dp"
            android:layout_marginTop="100dp"
            android:background="@drawable/islamic_catg"
            android:fontFamily="@font/fabrica"
            android:onClick="MoveToLanguageSelectionActivity"
            android:padding="20dp"
            android:text="@string/islamic_category"
            android:textColor="@color/white"
            android:textSize="25pt"
            android:shadowDx="0.0"
            android:shadowDy="0.0"
            android:shadowRadius="20"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.491"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="28dp"
            android:text="Choose Category"
            android:textSize="35dp"
            android:textColor="@color/black"
            android:fontFamily="@font/aquire"
            android:background="@drawable/custom_textview"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
    <!--

        <ImageView
            android:id="@+id/imageView6"
            android:layout_width="405dp"
            android:layout_height="142dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView5"
            app:srcCompat="@drawable/category_item_box"
            android:contentDescription="TODO" />

        <ImageView
            android:id="@+id/imageView7"
            android:layout_width="405dp"
            android:layout_height="142dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView6"
            app:layout_constraintVertical_bias="0.0"
            app:srcCompat="@drawable/category_item_box"
            android:contentDescription="TODO" />

        <TextView
            android:id="@+id/historyCategory"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/blackberry"
            android:onClick="MoveToLanguageSelectionActivityScience"
            android:text="@string/science_category"
            android:textColor="#FDEBF3EC"
            android:textSize="35sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/imageView7"
            app:layout_constraintEnd_toEndOf="@+id/imageView7"
            app:layout_constraintStart_toStartOf="@+id/imageView7"
            app:layout_constraintTop_toTopOf="@+id/imageView7" />

        <ImageView
            android:id="@+id/imageView5"
            android:layout_width="405dp"
            android:layout_height="142dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView9"
            app:srcCompat="@drawable/category_item_box"
            android:contentDescription="TODO" />

        <TextView
            android:id="@+id/IslamicCategory"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/blackberry"
            android:text="@string/islamic_category"
            android:textColor="#FDEBF3EC"
            android:textSize="40sp"
            android:onClick="MoveToLanguageSelectionActivityIslamic"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/imageView6"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.494"
            app:layout_constraintStart_toStartOf="@+id/imageView5"
            app:layout_constraintTop_toTopOf="@+id/imageView5"
            app:layout_constraintVertical_bias="0.471" />


        <TextView
            android:id="@+id/HistoryCategory"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/blackberry"
            android:text="@string/history_category"
            android:textColor="#FDEBF3EC"
            android:onClick="MoveToLanguageSelectionActivityHistory"
            android:textSize="35sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/imageView7"
            app:layout_constraintEnd_toEndOf="@+id/imageView6"
            app:layout_constraintHorizontal_bias="0.51"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/imageView6"
            app:layout_constraintVertical_bias="0.333" />

        <ImageView
            android:id="@+id/imageView9"
            android:layout_width="396dp"
            android:layout_height="246dp"
            android:layout_marginTop="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/category_heading_box" />
    -->


